--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
